# clang-plugin

./: CMakeLists.txt  ClangPlugin.cpp  ClangPluginCheck.h  ClangPluginRegistry.h  DefaultArguments.cpp  Matchers.h  MultipleInheritance.cpp  OverloadedOperator.cpp  StaticallyConstructedObjects.cpp  ThreadLocal.cpp  TrailingReturn.cpp  VirtualInheritance.cpp  build.sh
test/: default-arguments.cpp  lit.cfg  lit.site.cfg.in  multiple-inheritance.cpp  overloaded-operator.cpp  statically-constructed-objects.cpp  thread-local.cpp  trailing-return.cpp  virtual-inheritance.cpp
tests/: DefaultArguments.cpp  MultipleInheritance.cpp  OverloadedOperator.cpp  StaticallyConstructedObjects.cpp  ThreadLocal.cpp  TrailingReturn.cpp  VirtualInheritance.cpp
